<resources>
    <string name="app_name">Firebase Firestore</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="no_network_msg"><![CDATA[Please check your internet connection & try again]]></string>
    <string name="please_wait">please wait</string>
    <string name="loading">loading…</string>
    <string name="something_went_wrong">something went wrong, please try again</string>
    <string name="txt_no_data_found">no data found</string>
    <string name="no_internet_connection">no internet connection</string>
    <string name="back_online">back online</string>

    <string name="welcome">Welcome</string>
    <string name="signin_to_start">Sign in to continue</string>
    <string name="mobile_no">Mobile no</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="error_uppercase_pattern">Password must have atleast one uppercase character !!</string>
    <string name="error_lowercase_pattern">Password must have atleast one lowercase character !!</string>
    <string name="error_digit_pattern">Password must have atleast one digit character !!</string>
    <string name="enter_passowrd">Enter password</string>
    <string name="password_length">Check password length</string>
    <string name="enter_mobile_no">Mobile number can\'t blank</string>
    <string name="enter_valid_mobile_no">Enter valid mobile no</string>
    <string name="compose">Compose</string>
    <string name="draft">Draft</string>
    <string name="msg_log">Message Log</string>
    <string name="setting">Setting</string>
    <string name="select_desig">Select Designation</string>
    <string name="select_district">Select District</string>
    <string name="select_unit">Select Unit (PS / OP etc)</string>
    <string name="select_lang">Select Language</string>
    <string name="select_incident_date">Select Incident Date</string>
    <string name="select_action_token">Action token</string>
    <string name="other_info">Other Info</string>
    <string name="select_stand1">Stand to-1</string>
    <string name="select_stand2">Stand to-2</string>
    <string name="select_stand3">Stand to-3</string>
    <string name="select_stand4">Stand to-4</string>
    <string name="select_stand5">Stand to-5</string>
    <string name="incident_brief">Incident Brief</string>
    <string name="submit">Submit</string>
    <string name="language">language</string>
    <string name="logout">logout</string>
    <string name="dummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmood tempor inciddidunt ut labore et dolore magna sed do sed do aliqua.</string>
    <string name="select_stand">Select Stand-to</string>
    <string name="enter_incident_brief">Enter incident brief</string>
    <string name="enter_action_token">Enter action token</string>
    <string name="save_draft">Save Draft</string>
    <string name="please_select_distric_first">Please select district first</string>
    <string name="enter_valid_passowrd">Please enter valid password</string>
    <string name="incident_date">Incident Date</string>
    <string name="incident">Incident</string>
    <string name="action_token">Action Token</string>
    <string name="success">Success</string>
    <string name="message_successfully_sent">Message sucessfully sent</string>
    <string name="message_successfully_save">Message sucessfully save in draft</string>
    <string name="do_you_want_to_exit">Are you sure, you want to exit ?</string>
    <string name="confirm_exit">Confirm Exit</string>
    <string name="message_log">Message Log</string>
    <string name="exit">exit</string>

</resources>
