<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_65sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/logo" />

                <TextView
                    style="@style/txt_gray_small"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_desig"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_desig"
                        style="@style/EdittextBlack"
                        android:drawableRight="@drawable/ic_arrow_down"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_desig"
                        android:textSize="@dimen/_13sdp"
                        android:inputType="textCapSentences"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_district"
                        style="@style/EdittextBlack"
                        android:drawableRight="@drawable/ic_arrow_down"
                        android:focusableInTouchMode="false"
                        android:textSize="@dimen/_13sdp"
                        android:hint="@string/select_district"
                        android:inputType="textCapSentences"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_unit"
                        style="@style/EdittextBlack"
                        android:drawableRight="@drawable/ic_arrow_down"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_unit"
                        android:inputType="textCapSentences"
                        android:textSize="@dimen/_13sdp"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_lang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_lang"
                        style="@style/EdittextBlack"
                        android:drawableRight="@drawable/ic_arrow_down"
                        android:focusableInTouchMode="false"
                        android:hint="@string/select_lang"
                        android:textSize="@dimen/_13sdp"
                        android:inputType="textCapSentences"
                        android:longClickable="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wrapper_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:errorTextAppearance="@style/ErrorText"
                    app:passwordToggleDrawable="@drawable/password_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/gray">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_pwd"
                        style="@style/EdittextBlack"
                        android:hint="@string/password"
                        android:textSize="@dimen/_13sdp"
                        android:inputType="textPassword"
                        app:hintTextAppearance="@style/TextAppearance_bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_login"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:text="@string/login" />

                <LinearLayout
                    android:id="@+id/bottom_space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:orientation="vertical" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>